--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,7 @@
                                 <mapstruct.defaultInjectionStrategy>constructor</mapstruct.defaultInjectionStrategy>
                                 <interfaceOnly>true</interfaceOnly>
                                 <useSpringBoot3>true</useSpringBoot3>
+                                <useTags>true</useTags>
                             </configOptions>
 
                         </configuration>
