--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,8 +25,8 @@ server:
 
 logging:
   level:
+    org.springframework.web: DEBUG
     root: INFO
-    com.poziomk3: DEBUG
 
 springdoc:
   api-docs:
