chore: adjust network for deployment

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-SERVICE_DB_URL=jdbc:postgresql://postgresdb:5432/garagify
+SERVICE_DB_URL=jdbc:postgresql://postgres:5432/garagify
+SERVICE_DB_DB=garagify
 SERVICE_DB_LOGIN=postgres
 SERVICE_DB_PASSWORD=postgres
 
