--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.j02k</groupId>
     <artifactId>garagify</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0</version>
     <name>garagify</name>
     <description>My desc</description>
     <url/>
