--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <springdoc.version>2.2.0</springdoc.version>
         <swagger-parser.version>2.1.17</swagger-parser.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-        <jackson.databind.nullable.version>0.2.4</jackson.databind.nullable.version>
+        <jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
         <google.api-client.version>2.7.2</google.api-client.version>
         <google.oauth-client.version>1.34.1</google.oauth-client.version>
@@ -210,6 +210,11 @@
             <artifactId>lombok-mapstruct-binding</artifactId>
             <version>0.2.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.4</version>
         </dependency>
     </dependencies>
 
