Mail service implementation

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@ SERVICE_DB_PASSWORD=postgres
 
 JWT_SECRET=3IUIRg1kXZF9DrfhuBKU0+E8IHL+3yVcGVd0aE4z5y8=
 GOOGLE_CLIENT_ID=1234567890-abcde12345.apps.googleusercontent.com
+
+MAIL_HOST=smtp.example.com
+MAIL_PORT=2525
+MAIL_USERNAME=example_user
+MAIL_PASSWORD=example_password
+MAIL_SMTP_AUTH=true
+MAIL_SMTP_STARTTLS_ENABLE=true
+MAIL_SMTP_FROM=noreply@example.com
